# ice-simplifier

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  memo.md  write_cfmap.h  write_geodesics.h
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/: libigl.cmake
